<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:foregroundGravity="center_horizontal">
    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/memo_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="50dp"
            android:contentDescription="@string/img_description_memo"
            android:src="@drawable/placeholder"
            />
        <EditText
            android:id="@+id/edit_memo_title"
            android:layout_width="225dp"
            android:layout_height="50dp"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="50dp"
            android:hint="@string/enter_memo_title"
            android:inputType="textEmailSubject"
             />

        <EditText
            android:id="@+id/edit_memo_description"
            android:layout_width="289dp"
            android:layout_height="56dp"
            android:layout_marginBottom="50dp"
            android:hint="@string/enter_memo_text"
            android:inputType="textLongMessage"
            />

        <Button
            android:id="@+id/button_take_photo"
            android:layout_width="162dp"
            android:layout_height="60dp"
            android:layout_marginBottom="28dp"
            android:text="@string/button_take_photo"
            />

        <Button
            android:id="@+id/button_save_memo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="76dp"
            android:text="@string/button_save_memo"
             />
    </LinearLayout>
</ScrollView>